Add local copy (COPY) and symlink (SYMLINK) options to quant_downloader + order pref

--- a/models/DeepSeek-R1-0528/download.conf
+++ b/models/DeepSeek-R1-0528/download.conf
@@ -24,25 +24,60 @@ CHUNK_FIRST=2
 CHUNKS_TOTAL=1148
 
 # -----------------------------------------------------------------------------
-# Download sources:
+# Download sources configuration:
 #
-# RSYNC_SERVERS: list of rsync sources in the form
-#   "user:host:port:base_path"
-# e.g. "thireus:65.108.205.124:22:~/AI/DeepSeek-R1-0528-BF16-GGUF/SPECIAL/"
+# DOWNLOAD_ORDER:
+#   Defines the sequence of download methods to attempt.
+#   Only methods listed here will ever be used.
+#   Valid values: RSYNC, CURL, COPY, SYMLINK
+#   Example: DOWNLOAD_ORDER=(SYMLINK RSYNC CURL)
 #
-# CURL_ORGS: list of Hugging Face org/user and git branch in the form
-#   "org_or_user:branch"
-# e.g. "Thireus:main"
+# RSYNC_SERVERS:
+#   List of rsync endpoints where the repos can be found, each in the form:
+#     "user:host:port:base_path"
+#   e.g. "thireus:65.108.205.124:22:~/AI/DeepSeek-R1-0528-GGUF-REPOSITORIES/"
 #
-# You must set at least one non‑empty array here.
+# CURL_ORGS:
+#   List of Hugging Face organisation name and branches where the repos can be found, each in the form:
+#     "org_or_user:branch"
+#   e.g. "Thireus:main"
+#
+# COPY_FOLDERS:
+#   List of local <base_path> where the repos can be found.
+#   Files will be copied from:
+#     <base_path>/<REPOSITORY>/<FILENAME>
+#   e.g.:
+#     "/mnt/AI/DeepSeek-R1-0528-GGUF-REPOSITORIES/"
+#
+# SYMLINK_FOLDERS:
+#   List of local <base_path> where the repos can be found.
+#   Files will be symlinked from:
+#     <base_path>/<REPOSITORY>/<FILENAME>
+#   e.g.:
+#     "~/AI/DeepSeek-R1-0528-GGUF-REPOSITORIES/"
+#
+# You should configure at least one non‑empty array for the methods you intend to use.
 # -----------------------------------------------------------------------------
+
+# Define the download method order to go through, if a method missing or not specified it will not be used
+DOWNLOAD_ORDER=(SYMLINK RSYNC CURL)
 
 # Uncomment and edit to add one or more rsync endpoints
 RSYNC_SERVERS=(
-  #"thireus:65.108.205.124:22:~/AI/DeepSeek-R1-0528-BF16-GGUF/SPECIAL/"
+  #"thireus:65.108.205.124:22:~/AI/DeepSeek-R1-0528-GGUF-REPOSITORIES/"
 )
 
 # Uncomment and edit to point to Hugging Face repos/branches
 CURL_ORGS=(
   "Thireus:main"
+)
+
+# Uncomment and edit to add path in which the repos can be found locally, the files will be copied
+COPY_FOLDERS=(
+  #"/mnt/AI/DeepSeek-R1-0528-GGUF-REPOSITORIES/"
+)
+
+# Uncomment and edit to add path in which the repos can be found locally, the files will be symlinked
+SYMLINK_FOLDERS=(
+  #"~/AI/DeepSeek-R1-0528-GGUF-REPOSITORIES/"
 )
