--- a/models/DeepSeek-V3.2-Exp/download.conf
+++ b/models/DeepSeek-V3.2-Exp/download.conf
@@ -4,9 +4,9 @@
 # Configuration file for tensor_downloader.sh
 #
 # Defines the model parameters and download sources.  All of the first four
-# parameters are mandatory if you supply download.conf; RSYNC_SERVERS and
-# CURL_ORGS must each be declared as arrays, and at least one of them must
-# contain a non‑empty list.
+# parameters are mandatory if you supply download.conf; The other parameters
+# must each be declared as arrays, and at least one of them must contain a
+# non‑empty list.
 #
 # Place this file in the same directory as tensor_downloader.sh.
 # -----------------------------------------------------------------------------
@@ -29,55 +29,65 @@ CHUNKS_TOTAL=1087
 # DOWNLOAD_ORDER:
 #   Defines the sequence of download methods to attempt.
 #   Only methods listed here will ever be used.
-#   Valid values: RSYNC, CURL, COPY, SYMLINK
+#   Valid values: RSYNC, HUGGINGFACE, CURL, COPY, SYMLINK
 #   Example: DOWNLOAD_ORDER=(SYMLINK RSYNC CURL)
 #
 # RSYNC_SERVERS:
 #   List of rsync endpoints where the repos can be found, each in the form:
 #     "user:host:port:base_path"
-#   e.g. "thireus:65.108.205.124:22:~/AI/DeepSeek-V3.2-Exp-GGUF-REPOSITORIES/"
+#   e.g. "thireus:65.108.205.124:22:~/AI/DeepSeek-V3.2-Exp-REPOSITORIES/"
 #
-# CURL_ORGS:
+# HUGGINGFACE_ORGS:
 #   List of Hugging Face organisation name and branches where the repos can be found, each in the form:
 #     "org_or_user:branch"
 #   e.g. "Thireus:main"
+#
+# CURL_URLS:
+#   List of URLs where the repos can be found, each in the form:
+#     "https://hostname/", additionally an optional {N:H} parameter can be used to specify nodes.
+#   e.g. "https://gguf{5:20}.thireus.com/"
 #
 # COPY_FOLDERS:
 #   List of local <base_path> where the repos can be found.
 #   Files will be copied from:
 #     <base_path>/<REPOSITORY>/<FILENAME>
 #   e.g.:
-#     "/mnt/AI/DeepSeek-V3.2-Exp-GGUF-REPOSITORIES/"
+#     "/mnt/AI/DeepSeek-V3.2-Exp-REPOSITORIES/"
 #
 # SYMLINK_FOLDERS:
 #   List of local <base_path> where the repos can be found.
 #   Files will be symlinked from:
 #     <base_path>/<REPOSITORY>/<FILENAME>
 #   e.g.:
-#     "~/AI/DeepSeek-V3.2-Exp-GGUF-REPOSITORIES/"
+#     "~/AI/DeepSeek-V3.2-Exp-REPOSITORIES/"
 #
 # You should configure at least one non‑empty array for the methods you intend to use.
 # -----------------------------------------------------------------------------
 
 # Define the download method order to go through, if a method missing or not specified it will not be used
-DOWNLOAD_ORDER=(SYMLINK RSYNC CURL)
+DOWNLOAD_ORDER=(SYMLINK RSYNC HUGGINGFACE CURL)
 
 # Uncomment and edit to add one or more rsync endpoints
 RSYNC_SERVERS=(
-  #"thireus:65.108.205.124:22:~/AI/DeepSeek-V3.2-Exp-GGUF-REPOSITORIES/"
+  #"thireus:65.108.205.124:22:~/AI/DeepSeek-V3.2-Exp-REPOSITORIES/"
 )
 
 # Uncomment and edit to point to Hugging Face repos/branches
-CURL_ORGS=(
+HUGGINGFACE_ORGS=(
   "Thireus:main"
+)
+
+# Uncomment and edit to point to URLs
+CURL_URLS=(
+  "https://gguf{5:20}.thireus.com/"
 )
 
 # Uncomment and edit to add path in which the repos can be found locally, the files will be copied
 COPY_FOLDERS=(
-  #"/mnt/AI/DeepSeek-V3.2-Exp-GGUF-REPOSITORIES/"
+  #"/mnt/AI/DeepSeek-V3.2-Exp-REPOSITORIES/"
 )
 
 # Uncomment and edit to add path in which the repos can be found locally, the files will be symlinked
 SYMLINK_FOLDERS=(
-  #"~/AI/DeepSeek-V3.2-Exp-GGUF-REPOSITORIES/"
+  #"~/AI/DeepSeek-V3.2-Exp-REPOSITORIES/"
 )
