--- a/models/DeepSeek-V3.2/download.conf
+++ b/models/DeepSeek-V3.2/download.conf
@@ -12,7 +12,7 @@
 # -----------------------------------------------------------------------------
 
 # Name of the LLM model (must match repo naming convention)
-MODEL_NAME="DeepSeek-V3.2-Exp"
+MODEL_NAME="DeepSeek-V3.2"
 
 # Name of the GGUF maintainer (appears next to the model name)
 MAINTAINER="THIREUS"
@@ -35,7 +35,7 @@ CHUNKS_TOTAL=1087
 # RSYNC_SERVERS:
 #   List of rsync endpoints where the repos can be found, each in the form:
 #     "user:host:port:base_path"
-#   e.g. "thireus:65.108.205.124:22:~/AI/DeepSeek-V3.2-Exp-REPOSITORIES/"
+#   e.g. "thireus:65.108.205.124:22:~/AI/DeepSeek-V3.2-REPOSITORIES/"
 #
 # HUGGINGFACE_ORGS:
 #   List of Hugging Face organisation name and branches where the repos can be found, each in the form:
@@ -52,14 +52,14 @@ CHUNKS_TOTAL=1087
 #   Files will be copied from:
 #     <base_path>/<REPOSITORY>/<FILENAME>
 #   e.g.:
-#     "/mnt/AI/DeepSeek-V3.2-Exp-REPOSITORIES/"
+#     "/mnt/AI/DeepSeek-V3.2-REPOSITORIES/"
 #
 # SYMLINK_FOLDERS:
 #   List of local <base_path> where the repos can be found.
 #   Files will be symlinked from:
 #     <base_path>/<REPOSITORY>/<FILENAME>
 #   e.g.:
-#     "~/AI/DeepSeek-V3.2-Exp-REPOSITORIES/"
+#     "~/AI/DeepSeek-V3.2-REPOSITORIES/"
 #
 # You should configure at least one non‑empty array for the methods you intend to use.
 # -----------------------------------------------------------------------------
@@ -69,7 +69,7 @@ DOWNLOAD_ORDER=(SYMLINK RSYNC HUGGINGFACE CURL)
 
 # Uncomment and edit to add one or more rsync endpoints
 RSYNC_SERVERS=(
-  #"thireus:65.108.205.124:22:~/AI/DeepSeek-V3.2-Exp-REPOSITORIES/"
+  #"thireus:65.108.205.124:22:~/AI/DeepSeek-V3.2-REPOSITORIES/"
 )
 
 # Uncomment and edit to point to Hugging Face repos/branches
@@ -84,10 +84,10 @@ CURL_URLS=(
 
 # Uncomment and edit to add path in which the repos can be found locally, the files will be copied
 COPY_FOLDERS=(
-  #"/mnt/AI/DeepSeek-V3.2-Exp-REPOSITORIES/"
+  #"/mnt/AI/DeepSeek-V3.2-REPOSITORIES/"
 )
 
 # Uncomment and edit to add path in which the repos can be found locally, the files will be symlinked
 SYMLINK_FOLDERS=(
-  #"~/AI/DeepSeek-V3.2-Exp-REPOSITORIES/"
+  #"~/AI/DeepSeek-V3.2-REPOSITORIES/"
 )
